--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -10,12 +10,17 @@
     "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.13.2",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/lab": "^5.0.0-alpha.44",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "date-fns": "^2.28.0",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
