--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "date-fns": "^2.28.0",
     "next": "latest",
+    "next-auth": "^4.3.4",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest"
