--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "date-fns": "^2.28.0",
+    "mongoose": "^6.3.3",
     "next": "latest",
     "next-auth": "^4.3.4",
     "prop-types": "latest",
