--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -20,10 +20,12 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "date-fns": "^2.28.0",
+    "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "next": "latest",
-    "next-auth": "^4.3.4",
+    "next-auth": "^4.3.1",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest"
