--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -26,9 +26,11 @@
     "mongoose": "^6.3.3",
     "next": "latest",
     "next-auth": "^4.3.1",
+    "nodemailer": "^6.7.5",
     "prop-types": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "latest",
