--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -21,6 +21,8 @@
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@react-three/drei": "^9.11.2",
+    "@react-three/fiber": "^8.0.19",
     "date-fns": "^2.28.0",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
@@ -30,7 +32,8 @@
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "three": "^0.140.2"
   },
   "devDependencies": {
     "eslint": "latest",
