--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -30,8 +30,8 @@
     "next-auth": "^4.3.1",
     "nodemailer": "^6.7.5",
     "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "swr": "^1.3.0",
     "three": "^0.140.2"
   },
