nodemailer, ics and net added

--- a/finespecdetailing/package.json
+++ b/finespecdetailing/package.json
@@ -23,11 +23,13 @@
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "date-fns": "^2.28.0",
+    "ics": "^3.1.0",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "net": "^1.0.2",
     "next": "latest",
     "next-auth": "^4.3.1",
-    "nodemailer": "^6.7.5",
+    "nodemailer": "^6.9.1",
     "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
